Bug 1688776 [wpt PR 27317] - Change whitespace collapsing in Mozilla counter style WPT tests so that Blink can pass, a=testonly
Automatic update from web-platform-tests
Change whitespace collapsing in Mozilla counter style WPT tests so that Blink can pass (#27317)

In Firefox, white spaces in list marker text are never collapsed [1],
which can be a either bug or just a UA-defined behavior. The Mozilla
WPT tests currently assume this behavior. Blink doesn't have this
behavior, and therefore is currently failing on these tests.

For now, we modify the tests by adding 'white-space: pre' to list
markers, so that Blink can also pass them.

[1] https://bugzilla.mozilla.org/show_bug.cgi?id=1688769

Bug: 687225
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/2648650
Commit-Queue: Xiaocheng Hu <xiaochenghchromium.org>
Cr-Commit-Position: refs/heads/master{#847925}

--

wpt-commits: 9cdaa1607511824df0c9ae77f6b60d0b23f24d04
wpt-pr: 27317

UltraBlame original commit: c6f424681d1cc1e8fc1f07f80c685808913ff65e

--- a/testing/web-platform/tests/css/vendor-imports/mozilla/mozilla-central-reftests/counter-styles-3/support/test-common.css
+++ b/testing/web-platform/tests/css/vendor-imports/mozilla/mozilla-central-reftests/counter-styles-3/support/test-common.css
@@ -78,3 +78,39 @@ right
 5em
 ;
 }
+li
+:
+:
+marker
+{
+/
+*
+Blink
+workaround
+of
+https
+:
+/
+/
+bugzilla
+.
+mozilla
+.
+org
+/
+show_bug
+.
+cgi
+?
+id
+=
+1688769
+*
+/
+white
+-
+space
+:
+pre
+;
+}
